--- a/Kruskal.html
+++ b/Kruskal.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
     <title>Алгоритм Краскала</title>
 	<script type="text/javascript" src="scripts/jquery.js"></script>
+	<script type="text/javascript" src="scripts/qsort.js"></script>
 	<script type="text/javascript" src="scripts/kruskal.js"></script>
 	<script type="text/javascript" src="scripts/edge.js"></script>
 	<script type="text/javascript" src="scripts/vertice.js"></script>
