Алгоритм Крускала работает. Файл vertice.js и соответствующий класс переименованы в Vertex

--- a/Kruskal.html
+++ b/Kruskal.html
@@ -7,12 +7,12 @@
 	<script type="text/javascript" src="scripts/qsort.js"></script>
 	<script type="text/javascript" src="scripts/kruskal.js"></script>
 	<script type="text/javascript" src="scripts/edge.js"></script>
-	<script type="text/javascript" src="scripts/vertice.js"></script>
+	<script type="text/javascript" src="scripts/vertex.js"></script>
 
 	<script type="text/javascript">
 		$(document).ready( function() {
 			var a = new Kruskal();
-			b = a.start();
+			var b = a.getSpanningTree();
 		});
 	</script>
 </head>
