--- a/Kruskal.html
+++ b/Kruskal.html
@@ -5,50 +5,52 @@
     <title>Алгоритм Краскала</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="scripts/jquery.js"></script>
+	<script type="text/javascript" src="scripts/utils.js"></script>
 	<script type="text/javascript" src="scripts/qsort.js"></script>
 	<script type="text/javascript" src="scripts/kruskal.js"></script>
 	<script type="text/javascript" src="scripts/edge.js"></script>
 	<script type="text/javascript" src="scripts/vertex.js"></script>
 	<script type="text/javascript" src="scripts/graphview.js"></script>
+	<script type="text/javascript" src="scripts/controller.js"></script>
 
 	<script type="text/javascript">
 		$(document).ready( function() {
-			var a = new Kruskal();
-			var b = a.getSpanningTree();
+			var c = new Controller();
+			getEl('apply_adj_matr_button').onclick = function() {
+				c.deleteAdjMatrix();
+				c.createAdjMatrix( +getEl('vert_input').value );
+			}
 
-			var view = new GraphView( a.getVertices(), a.getEdges() );
-			view.draw();
-
-			alert( "Найдено минимальное остовное дерево длины " + a.getSpanningTreeWeight() );
+			getEl('solve_button').onclick = function() {
+				c.start();
+			}
 		});
 	</script>
 </head>
 <body>
-	<!--<div id="svg_container">
-		<svg />
-	</div>
-	<div id="controls_container">
-		<table id="controls">
-			<tr>
-				<td>
-					<table id="adj_matrix" />
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<input type="button" value="Нарисовать и решить" />
-				</td>
-			</tr>
-		</table>
-	</div>-->
-
 	<table id="wrapper" cellpadding="0" cellspacing="0">
 		<tr>
-			<td class="wrapper_id">
+			<td class="wrapper_td" id="svg_container">
 				<svg />
 			</td>
-			<td class="wrapper_id">
+			<td class="wrapper_td">
 				<table id="controls">
+					<tr>
+						<td>
+							Вершин в графе: <input id="vert_input" type="range" min="1" max="30" value="7" />
+							<span id="vertices_value"></span>
+							<input type="button" value="Применить" id="apply_adj_matr_button"/>
+
+							<script type="text/javascript">
+								window.onload = function() {
+									getEl('vertices_value').innerHTML = getEl('vert_input').value;
+								}
+								getEl('vert_input').onchange = function() {
+									getEl('vertices_value').innerHTML = this.value;
+								}
+							</script>
+						</td>
+					</tr>
 					<tr>
 						<td>
 							<table id="adj_matrix" width="100%"></table>
@@ -56,7 +58,7 @@
 					</tr>
 					<tr>
 						<td align="center">
-							<input type="button" value="Нарисовать и решить" />
+							<input type="button" value="Решить и отрисовать" id="solve_button" />
 						</td>
 					</tr>
 				</table>
